<resources>
    <string name="app_name">Mortgage</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">mortgage</string>
    <string name="purchasePriceText">Purchase price:</string>
    <string name="dollar">$</string>
    <string name="downPaymentText">Down payment:</string>
    <string name="downPaymentSuffix">% ($60,000)</string>
    <string name="mortgageTerm">Mortgage term:</string>
    <string name="years">years</string>
    <string name="interestRate">Interest rate:</string>
    <string name="percentage">%</string>
    <string name="propertyTax">Property tax:</string>
    <string name="dollarPerYear">$ per year</string>
    <string name="propertyInsurance">Property insurance:</string>
    <string name="pmi">PMI:</string>
    <string name="zipCode">ZIP Code:</string>
    <string name="firstPaymentDate">First payment date:</string>
    <string name="calculate">Calculate</string>
    <string name="totalPayment">Total Payment</string>
    <string name="totalMonthlyPayment">Total Monthly Payment</string>
    <string name="payoffDate">Payoff Date</string>
    <string name="pmiValue">0.52</string>
    <string name="viewHistory">View History</string>

    <string-array name="month_array">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string-array name="year_array">
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
        <item>2031</item>
    </string-array>
    <string name="title_activity_display_result">DisplayResult</string>

</resources>
